examples/test/testpolicy10539.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10539
  namespace: namespace74
spec:
  podSelector:
    matchLabels:
      key6: value1
      key45: value13
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value41
          key1: value2
          key44: value37
      podSelector:
        matchLabels:
          key31: value34
          key41: value38
          key8: value10
